[package]
name = "AOC2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="day1a"
path="src/1a.rs"

[[bin]]
name="day1b"
path="src/1b.rs"

[[bin]]
name="day2a"
path="src/2a.rs"

[[bin]]
name="day2b"
path="src/2b.rs"

[[bin]]
name="day3a"
path="src/3a.rs"

[[bin]]
name="day3b"
path="src/3b.rs"

[[bin]]
name="day4a"
path="src/4a.rs"

[[bin]]
name="day4b"
path="src/4b.rs"

[[bin]]
name="day5a"
path="src/5a.rs"

[[bin]]
name="day5b"
path="src/5b.rs"

[[bin]]
name="day6a"
path="src/6a.rs"

[[bin]]
name="day6b"
path="src/6b.rs"

[[bin]]
name="day7a"
path="src/7a.rs"

[[bin]]
name="day7b"
path="src/7b.rs"

[[bin]]
name="day8a"
path="src/8a.rs"

[[bin]]
name="day8b"
path="src/8b.rs"

[[bin]]
name="day9a"
path="src/9a.rs"

[[bin]]
name="day9b"
path="src/9b.rs"

