[package]
name = "AOC2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="day1a"
path="src/1a.rs"

[[bin]]
name="day1b"
path="src/1b.rs"

[[bin]]
name="day2a"
path="src/2a.rs"

[[bin]]
name="day2b"
path="src/2b.rs"

[[bin]]
name="day3a"
path="src/3a.rs"

[[bin]]
name="day3b"
path="src/3b.rs"

[[bin]]
name="day4a"
path="src/4a.rs"

[[bin]]
name="day4b"
path="src/4b.rs"

[[bin]]
name="day5a"
path="src/5a.rs"

[[bin]]
name="day5b"
path="src/5b.rs"

[[bin]]
name="day6a"
path="src/6a.rs"

[[bin]]
name="day6b"
path="src/6b.rs"

[[bin]]
name="day7a"
path="src/7a.rs"

[[bin]]
name="day7b"
path="src/7b.rs"

[[bin]]
name="day8a"
path="src/8a.rs"

[[bin]]
name="day8b"
path="src/8b.rs"

[[bin]]
name="day9a"
path="src/9a.rs"

[[bin]]
name="day9b"
path="src/9b.rs"

[[bin]]
name="day10a"
path="src/10a.rs"

[[bin]]
name="day10b"
path="src/10b.rs"

[[bin]]
name="day11a"
path="src/11a.rs"

[[bin]]
name="day11b"
path="src/11b.rs"

[[bin]]
name="day12a"
path="src/12a.rs"

[[bin]]
name="day12b"
path="src/12b.rs"

[[bin]]
name="day13a"
path="src/13a.rs"

[[bin]]
name="day13b"
path="src/13b.rs"

[[bin]]
name="day14a"
path="src/14a.rs"

[[bin]]
name="day14b"
path="src/14b.rs"

[[bin]]
name="day15a"
path="src/15a.rs"

[[bin]]
name="day15b"
path="src/15b.rs"

[[bin]]
name="day16a"
path="src/16a.rs"

[[bin]]
name="day16b"
path="src/16b.rs"

[[bin]]
name="day17a"
path="src/17a.rs"

[[bin]]
name="day17b"
path="src/17b.rs"

[[bin]]
name="day18a"
path="src/18a.rs"

[[bin]]
name="day18b"
path="src/18b.rs"

[[bin]]
name="day19a"
path="src/19a.rs"

[[bin]]
name="day19b"
path="src/19b.rs"

[[bin]]
name="day20a"
path="src/20a.rs"

[[bin]]
name="day20b"
path="src/20b.rs"

[[bin]]
name="day21a"
path="src/21a.rs"

[[bin]]
name="day21b"
path="src/21b.rs"

[[bin]]
name="day22a"
path="src/22a.rs"

